exports[`kinopoisk/filmIdFromSearchResults filters results 1`] = `
Array [
  Object {
    "countries": Array [],
    "id": 1,
    "title": "foo",
    "year": 2016,
  },
]
`;

exports[`kinopoisk/filmIdFromSearchResults filters results 2`] = `
Array [
  Object {
    "countries": Array [],
    "id": 1,
    "title": "Звёздные войны",
    "year": 2015,
  },
  Object {
    "countries": Array [],
    "id": 2,
    "title": "Звездные войны",
    "year": 2016,
  },
]
`;

exports[`kinopoisk/filmIdFromSearchResults filters results 3`] = `
Array [
  Object {
    "countries": Array [],
    "id": 2,
    "originalTitle": "Star Wars: Episode VII - The Force Awakens",
    "title": "Звёздные войны",
    "year": 2016,
  },
]
`;

exports[`kinopoisk/filmIdFromSearchResults filters results 4`] = `
Array [
  Object {
    "countries": Array [],
    "id": 2,
    "title": "foo",
    "year": 2016,
  },
  Object {
    "countries": Array [],
    "id": 4,
    "title": "foo",
    "year": 2016,
  },
]
`;

exports[`kinopoisk/filmIdFromSearchResults filters results 5`] = `
Array [
  Object {
    "countries": Array [
      "США",
      "Россия",
      "Германия",
    ],
    "id": 2,
    "title": "foo",
    "year": 2016,
  },
  Object {
    "countries": Array [
      "США",
      "Россия",
    ],
    "id": 4,
    "title": "foo",
    "year": 2016,
  },
]
`;
